# basket/docs/swagger.json
@@ -68,6 +68,36 @@
                     }
                 }
             }
+        },
+        "/baskets/{userId}/verify": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "BasketApi"
+                ],
+                "summary": "Verify Basket By User ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "UserID",
+                        "name": "userId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"msg\":\"Success\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -92,6 +122,9 @@
                     "type": "string"
                 },
                 "quantity": {
+                    "type": "integer"
+                },
+                "unitPrice": {
                     "type": "integer"
                 }
             }
